--- a/setup/enviroment.yml
+++ b/setup/enviroment.yml
@@ -129,6 +129,8 @@ dependencies:
     - rsa==4.6
     - scipy==1.5.4
     - soupsieve==2.0.1
+    - seaborn==0.11.2
+    - scikit-learn==0.23
     - svgwrite==1.4
     - tabulate==0.8.7
     - tree==0.2.4
